test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_pretend_expr.draco
proc main() void : a := pretend(a, int); corp;

