test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_pretend_expr_to_void.draco
proc main() void : a := pretend(a, void); corp;

